crates/gridwell-writer-xlsx/tests/snapshots/snapshots__colspan-basic.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" s="1"/><c r="B1" t="inlineStr" s="2"><is><t xml:space="preserve">Scores</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr" s="1"><is><t xml:space="preserve">Name</t></is></c><c r="B2" t="inlineStr" s="2"><is><t xml:space="preserve">Q1</t></is></c><c r="C2" t="inlineStr" s="2"><is><t xml:space="preserve">Q2</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t xml:space="preserve">Alice</t></is></c><c r="B3" t="inlineStr" s="3"><is><t xml:space="preserve">90</t></is></c><c r="C3" t="inlineStr" s="3"><is><t xml:space="preserve">95</t></is></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t xml:space="preserve">Bob</t></is></c><c r="B4" t="inlineStr" s="3"><is><t xml:space="preserve">85</t></is></c><c r="C4" t="inlineStr" s="3"><is><t xml:space="preserve">88</t></is></c></row>
</sheetData>
<mergeCells count="1"><mergeCell ref="B1:C1"/></mergeCells>
</worksheet>
