crates/gridwell-writer-xlsx/tests/snapshots/snapshots__column-widths-mixed.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="17.14" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/><col min="4" max="4" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Fixed</t></is></c><c r="B1" t="inlineStr" s="1"><is><t xml:space="preserve">Percent</t></is></c><c r="C1" t="inlineStr" s="1"><is><t xml:space="preserve">Fraction</t></is></c><c r="D1" t="inlineStr" s="1"><is><t xml:space="preserve">Auto</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t xml:space="preserve">120px</t></is></c><c r="B2" t="inlineStr"><is><t xml:space="preserve">25%</t></is></c><c r="C2" t="inlineStr"><is><t xml:space="preserve">1fr</t></is></c><c r="D2" t="inlineStr"><is><t xml:space="preserve">auto</t></is></c></row>
</sheetData>
</worksheet>
