crates/gridwell-writer-xlsx/tests/snapshots/snapshots__financial-report.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t xml:space="preserve">Quarterly P&amp;L</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr" s="1"><is><t xml:space="preserve">Line item</t></is></c><c r="B2" t="inlineStr" s="2"><is><t xml:space="preserve">Q1</t></is></c><c r="C2" t="inlineStr" s="2"><is><t xml:space="preserve">Q2</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t xml:space="preserve">Revenue</t></is></c><c r="B3" t="inlineStr" s="3"><is><t xml:space="preserve">$1,200</t></is></c><c r="C3" t="inlineStr" s="3"><is><t xml:space="preserve">$1,350</t></is></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t xml:space="preserve">COGS</t></is></c><c r="B4" t="inlineStr" s="4"><is><t xml:space="preserve">$700</t></is></c><c r="C4" t="inlineStr" s="4"><is><t xml:space="preserve">$760</t></is></c></row>
<row r="5"><c r="A5" t="inlineStr"><is><t xml:space="preserve">Opex</t></is></c><c r="B5" t="inlineStr" s="3"><is><t xml:space="preserve">$300</t></is></c><c r="C5" t="inlineStr" s="3"><is><t xml:space="preserve">$320</t></is></c></row>
<row r="6"><c r="A6" t="inlineStr" s="5"><is><t xml:space="preserve">Net income</t></is></c><c r="B6" t="inlineStr" s="6"><is><t xml:space="preserve">$200</t></is></c><c r="C6" t="inlineStr" s="6"><is><t xml:space="preserve">$270</t></is></c></row>
<row r="8"><c r="A8" t="inlineStr"><is><t xml:space="preserve">Unaudited management figures.</t></is></c></row>
</sheetData>
</worksheet>
